hphp/hack/test/typecheck/instanceof/instanceof_parent_outside.php.exp
File "instanceof_parent_outside.php", line 4, characters 13-18:
Unbound name: parent (Naming[2049])
